# emt-process

./: .flake8  .gitignore  Pipfile  README.md  author_map.py  create_mets_from_csv.py  create_mets_v2.py  create_templates.py  enrich.py  enriched_gesamt.csv  enriched_test.csv  gesamt_liste.csv  image_size.csv  mets_meta.xml  mets_template.xml  newProject.xpr  pyproject.toml  requirements.txt  split.xsl  tei_template.xml  upload_mets_transkribus.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: push_mets_to_transkribus.yml
emt-data/: import_transkribus_letters.csv
output/: Kasten_blau_44_2b_0005_mets.xml  Kasten_blau_44_2b_0009_mets.xml  Kasten_blau_44_2b_0011_mets.xml  Kasten_blau_44_2b_0012_mets.xml
