[tool.poetry]
name = "emt-process"
version = "0.1.0"
description = ""
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
lxml = "^4.6.3"
python-dateutil = "^2.8.2"
Jinja2 = "^3.0.1"
acdh-tei-pyutils = "^0.16.0"
Pillow = "^8.3.2"
plac = "^1.3.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
